adding config, swagger doc changes
