# cmd/api/main.go
@@ -1,18 +1,22 @@
 package main
 
 import (
+	"fmt"
 	"log"
+	"project/internal/config"
 	"project/internal/handler"
 	"project/internal/infra/database"
 	httpInfra "project/internal/infra/http"
 	"project/internal/usecase"
 
 	_ "project/docs"
+
+	"github.com/gin-gonic/gin"
 )
 
 // @title Product API
 // @version 1.0
-// @description API for managing products
+// @description API for fetching product item
 // @termsOfService http://swagger.io/terms/
 
 // @contact.name Alex Duzi
@@ -22,9 +26,13 @@ import (
 // @license.url http://www.apache.org/licenses/LICENSE-2.0.html
 
 // @host localhost:8080
-// @BasePath /api/v1
+// @BasePath /
 // @schemes http https
 func main() {
+	cfg := config.Load()
+
+	gin.SetMode(cfg.GinMode)
+
 	db, err := database.InitDB()
 	if err != nil {
 		log.Fatal("Failed to initialize database:", err)
@@ -41,8 +49,9 @@ func main() {
 
 	router := httpInfra.SetupRouter(productHandler, healthHandler)
 
-	log.Println("Server starting on :8080")
-	if err := router.Run(":8080"); err != nil {
+	serverAddr := fmt.Sprintf(":%s", cfg.AppPort)
+	log.Printf("Starting server on %s (mode: %s, env: %s)", serverAddr, cfg.GinMode, cfg.AppEnv)
+	if err := router.Run(serverAddr); err != nil {
 		log.Fatal("Failed to start server:", err)
 	}
 }
